# gesetzessuche

./: .gitignore  LICENSE  MANIFEST.in  README.md  law_mapping.json  mypy.ini  pyproject.toml  requirements.txt
examples/: markdown_export.py
gesetzessuche/: __init__.py  __version__.py  cli.py  download.py  formatting.py  models.py  parser.py  search.py  server.py  utils.py
tests/: README.md  test_forward_refs.py  test_law_mapping.py  test_law_reference_parser.py  test_mcp_cache.py  test_mcp_server.py  test_parser.py
